--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
         with:
           python-version: '3.7'
       - run: |
-          python -c "import os; print(1, "FOO" in os.environ)"
+          python -c "import os; print(1, 'FOO' in os.environ)"
           python -c "import os; print(2, bool(os.environ.get('FOO','')))"
       - if: matrix.os == 'windows-latest'
         uses: actions/cache@v1
