--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 deps =
   {env:CI_DEPS:}
   -rrequirements.txt
-passenv = CODECOV_TOKEN CI CI_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* SNAPSHOT_* OPENSSL RTOOL_*
+# TOXENV, CODECOV_*, CI, VCS_*, TRAVIS, APPVEYOR are all passed for codecov.
+passenv = TOXENV CODECOV_* CI CI_* VCS_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* RTOOL_*
 setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
@@ -40,7 +41,6 @@ commands =
   python ./test/individual_coverage.py
 
 [testenv:cibuild]
-passenv = TRAVIS_* APPVEYOR_* AWS_* TWINE_* DOCKER_* RTOOL_KEY WHEEL DOCKER PYINSTALLER WININSTALLER
 deps =
   -rrequirements.txt
   pyinstaller==3.5
