ci: only push docker images when tests pass

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
   # Separate from everything else because slow.
   build-and-deploy-docker:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
-    needs: build-wheel
+    needs: [test, test-web-ui, build-wheel]
     runs-on: ubuntu-latest
     env:
       CI_BUILD_DOCKER: 1
