--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
   {env:CI_DEPS:}
   -rrequirements.txt
 # TOXENV, CODECOV_*, CI, VCS_*, TRAVIS, APPVEYOR are all passed for codecov.
-passenv = TOXENV CODECOV_* CI CI_* VCS_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* RTOOL_*
+passenv = TOXENV CODECOV_* CI CI_* VCS_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* RTOOL_* AWS_* TWINE_* DOCKER_*
 setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
@@ -62,7 +62,6 @@ commands =
   pathoc --version
 
 [testenv:docs]
-passenv = TRAVIS_* APPVEYOR_* AWS_*
 deps =
   -rrequirements.txt
   awscli
