--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
   {env:CI_DEPS:}
   -rrequirements.txt
 # TOXENV, CODECOV_*, CI, VCS_*, TRAVIS, APPVEYOR are all passed for codecov.
-passenv = TOXENV CODECOV_* CI CI_* VCS_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* RTOOL_* AWS_* TWINE_* DOCKER_*
+passenv = TOXENV CODECOV_* CI CI_* VCS_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* AWS_* TWINE_* DOCKER_*
 setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
