--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,7 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 
 [testenv]
 deps =
-  {env:CI_DEPS:}
   -rrequirements.txt
-# TOXENV, CODECOV_*, CI, VCS_*, TRAVIS, APPVEYOR are all passed for codecov.
-passenv = TOXENV CODECOV_* CI CI_* VCS_* TRAVIS TRAVIS_* APPVEYOR APPVEYOR_* GITHUB_* AWS_* TWINE_* DOCKER_*
 setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
@@ -16,7 +13,6 @@ commands =
     --cov=mitmproxy --cov=pathod --cov=release \
     --full-cov=mitmproxy/ --full-cov=pathod/ \
     {posargs}
-  {env:CI_COMMANDS:python -c ""}
 
 [testenv:py35]
 whitelist_externals =
@@ -41,6 +37,7 @@ commands =
   python ./test/individual_coverage.py
 
 [testenv:cibuild]
+passenv = CI_* GITHUB_* AWS_* TWINE_* DOCKER_*
 deps =
   -rrequirements.txt
   pyinstaller==3.5
@@ -62,6 +59,7 @@ commands =
   pathoc --version
 
 [testenv:docs]
+passenv = GITHUB_* AWS_*
 deps =
   -rrequirements.txt
   awscli
