--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,9 @@ jobs:
         run: git checkout -b "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
       - if: github.head_ref != ''
         run: git checkout -b "$(echo ${{ github.head_ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
-      - run: codecov -X gcov -X search -f coverage.xml --name python-${{ matrix.os }}
+      - run: |
+          pip install codecov
+          codecov -X gcov -X search -f coverage.xml --name python-${{ matrix.os }}
   test-py35:
     runs-on: ubuntu-latest
     steps:
