--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request]
+on: [push, pull_request, create]
 
 # We currently use Python 3.7 for most things:
 # - zstandard currently doesn't have 3.8 wheels,
