Revert "ci: run on tags"
This reverts commit 924f677fb6d3dd5500c6e72be4936015d1ac7daa.
We suddenly get "push" builds for tags as well, so it's not really clear
what's happening. Removing for now.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request, create]
+on: [push, pull_request]
 
 # We currently use Python 3.7 for most things:
 # - zstandard currently doesn't have 3.8 wheels,
