[requires.io] dependency update

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35, py36, py37, lint, individual_coverage, wheeltest, docs
+envlist = py35, py36, py37, flake8, filename_matching, mypy, individual_coverage, docs
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
@@ -22,13 +22,24 @@ deps =
 commands =
   bash -c "mitmdump --version 2>&1 | grep 'mitmproxy requires Python 3.6'"
 
-[testenv:lint]
+[testenv:flake8]
+deps = flake8>=3.7.8,<3.8
 commands =
-  mitmdump --version
   flake8 --jobs 8 mitmproxy pathod examples test release
+
+[testenv:filename_matching]
+commands =
   python ./test/filename_matching.py
-  rstcheck README.rst
+
+[testenv:mypy]
+deps = mypy>=0.770,<0.771
+commands =
   mypy .
+
+[testenv:rstcheck]
+deps = rstcheck>=2.2,<4.0
+commands =
+  rstcheck README.rst
 
 [testenv:individual_coverage]
 deps =
