--- a/docs/src/config.toml
+++ b/docs/src/config.toml
@@ -5,6 +5,7 @@ theme = "mitmproxydocs"
 publishDir = "../public"
 RelativeURLs = true
 googleAnalytics = "UA-4150636-13"
+pygmentsCodefences = true
 
 [indexes]
   tag = "tags"
