HTTPRequest -> http.Request, add request.authority

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ exclude_lines =
     raise NotImplementedError()
     if typing.TYPE_CHECKING:
     if TYPE_CHECKING:
+    @overload
 
 [mypy]
 ignore_missing_imports = True
@@ -55,13 +56,16 @@ exclude =
 [tool:individual_coverage]
 exclude =
     mitmproxy/addons/onboardingapp/app.py
+    mitmproxy/addons/session.py
     mitmproxy/addons/termlog.py
     mitmproxy/contentviews/base.py
     mitmproxy/controller.py
     mitmproxy/ctx.py
     mitmproxy/exceptions.py
     mitmproxy/flow.py
+    mitmproxy/io/db.py
     mitmproxy/io/io.py
+    mitmproxy/io/protobuf.py
     mitmproxy/io/tnetstring.py
     mitmproxy/log.py
     mitmproxy/master.py
