--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
           python-version: '3.8'
       - run: pip install tox
       - run: tox -e cibuild -- build
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v2
         with:
           name: wheel
           path: release/dist
@@ -108,7 +108,7 @@ jobs:
       - run: pip install tox
       - run: tox -e cibuild -- build
       # artifacts must have different names, see https://github.com/actions/upload-artifact/issues/24
-      - uses: actions/upload-artifact@master
+      - uses: actions/upload-artifact@v2
         with:
           name: binaries.${{ matrix.os }}
           path: release/dist
@@ -168,7 +168,7 @@ jobs:
         with:
           python-version: '3.7'
       - run: pip install tox
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@v2
         with:
           name: wheel
           path: release/dist
@@ -192,22 +192,8 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: '3.8'
-      # artifacts must be downloaded individually, see https://github.com/actions/download-artifact/issues/6
       - uses: actions/download-artifact@master
         with:
-          name: wheel
-          path: release/dist
-      - uses: actions/download-artifact@master
-        with:
-          name: binaries.windows-2019
-          path: release/dist
-      - uses: actions/download-artifact@master
-        with:
-          name: binaries.macos-10.15
-          path: release/dist
-      - uses: actions/download-artifact@master
-        with:
-          name: binaries.ubuntu-16.04
           path: release/dist
       - run: ls release/dist
       - run: pip install tox
