--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,6 @@ jobs:
             py: 3.7
           - os: ubuntu-latest
             py: 3.6
-          - os: ubuntu-latest
-            py: 3.5
     runs-on: ${{ matrix.os }}
     steps:
       - run: printenv
@@ -69,6 +67,15 @@ jobs:
           file: ./coverage.xml
           name: ${{ matrix.os }}
           fail_ci_if_error: false
+  test-unsupported-python-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: '3.5'
+      - run: pip install tox
+      - run: tox -e py35
   build-wheel:
     runs-on: ubuntu-latest
     env:
@@ -192,7 +199,7 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: '3.8'
-      - uses: actions/download-artifact@master
+      - uses: actions/download-artifact@v2
         with:
           path: release/dist
       - run: ls release/dist
