don't count overage for AssertionErrors
A common pattern in sans-io is to essentially match on all variants of
an enum, and then have a `else: raise AssertionError` in the end.
This increases robustness as we spot incomplete coverage instead of
silently passing. However, it makes no sense to explicitly test these
asserts.

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,8 @@ omit = *contrib*, *tnetstring*, *platform*, *main.py
 show_missing = True
 exclude_lines =
     pragma: no cover
-    raise NotImplementedError()
+    raise NotImplementedError
+    raise AssertionError
     if typing.TYPE_CHECKING:
     if TYPE_CHECKING:
     @overload
