--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           file: ./coverage.xml
           name: ${{ matrix.os }}
-          fail_ci_if_error: false
+          flags: python
   test-unsupported-python-version:
     runs-on: ubuntu-latest
     steps:
@@ -142,7 +142,7 @@ jobs:
         with:
           file: ./web/coverage/coverage-final.json
           name: web
-          fail_ci_if_error: false
+          flags: web
 
   docs:
     env:
