--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
   bash -c "mitmdump --version 2>&1 | grep 'mitmproxy requires Python 3.6'"
 
 [testenv:flake8]
-deps = flake8>=3.7.8,<3.8
+deps = flake8==3.8
 commands =
   flake8 --jobs 8 mitmproxy pathod examples test release
 
@@ -32,7 +32,7 @@ commands =
   python ./test/filename_matching.py
 
 [testenv:mypy]
-deps = mypy>=0.761,<0.762
+deps = mypy==0.782
 commands =
   mypy .
 
@@ -52,7 +52,7 @@ passenv = CI_* GITHUB_* AWS_* TWINE_* DOCKER_*
 deps =
   -rrequirements.txt
   pyinstaller==3.5
-  twine==3.1.1
+  twine==3.2.0
   awscli
 commands =
   mitmdump --version
