revert some minor changes

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35, py36, py37, py38, flake8, filename_matching, mypy, individual_coverage, docs
+envlist = py35, py36, py37, py38, py39, flake8, filename_matching, mypy, individual_coverage, docs
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
