--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35, py36, py37, py38, py39, flake8, filename_matching, mypy, individual_coverage, docs
+envlist = py35, py38, py39, flake8, filename_matching, mypy, individual_coverage, docs
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
@@ -20,7 +20,7 @@ whitelist_externals =
 deps =
   -rrequirements.txt
 commands =
-  bash -c "mitmdump --version 2>&1 | grep 'mitmproxy requires Python 3.6'"
+  bash -c "mitmdump --version 2>&1 | grep 'mitmproxy requires Python 3.8'"
 
 [testenv:flake8]
 deps = flake8==3.8.4
