--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35, py36, py37, py38, py39, flake8, filename_matching, mypy, individual_coverage, docs
+envlist = py38, py39, flake8, filename_matching, mypy, individual_coverage, docs
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
@@ -13,14 +13,6 @@ commands =
     --cov=mitmproxy --cov=pathod --cov=release \
     --full-cov=mitmproxy/ --full-cov=pathod/ \
     {posargs}
-
-[testenv:py35]
-whitelist_externals =
-  bash
-deps =
-  -rrequirements.txt
-commands =
-  bash -c "mitmdump --version 2>&1 | grep 'mitmproxy requires Python 3.6'"
 
 [testenv:flake8]
 deps = flake8==3.8.4
